...
            android:text="Yosemite Decimal System"
            android:drawableEnd="@drawable/boulder"
            android:drawablePadding="8dp"
            />

        <com.responsivebytes.gradeconverter.Views.LockableViewPager
            android:id="@+id/viewPager"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="80dp"/>

    </LinearLayout>

...
