<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.responsivebytes.gradeconverter.MainActivity">
    <item
        android:id="@+id/edit_menu_item"
        android:orderInCategory="100"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/info_menu_item"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/info"
        app:showAsAction="always" />
</menu>
